<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".createschedule.view.AddScheduleFragment">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="back"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_shift_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/form_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/save_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.cardview.widget.CardView
                android:id="@+id/start_date_card"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/form_start_date"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_clipboard_text_clock" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/end_date_card"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/form_end_date"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_clipboard_text_clock" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/employee_card"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/employee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/form_employee"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_account" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/role_card"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/form_role"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_hammer_wrench" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/color_card"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/form_color"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_palette" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/save_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/save_btn"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>